Some CSS elements. So give me just a little baby. Just something to get buy. It's going to last forever. Forget the other side. And we will live forever baby. And stretch across the sky. I follow right behind you baby. We're never going to die.

--- a/src/Board.css
+++ b/src/Board.css
@@ -6,6 +6,14 @@
   grid-template-rows: repeat(3, 1fr); /* Total vertical space broken into 3 rows */
 }
 
+div {
+	background-color: #545662;
+
+}
+
 .box {
   border: 1px solid black; /* Shows the lines in the CSS grid */
+  text-align: center;
+  font-size: 50px;
+
 }
